# tree-sitter-markdoc

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  FINAL_STATUS_REPORT.md  GRAMMAR_REVIEW.md  HIGHLIGHTING.md  HIGHLIGHTING_SUPPORT.md  LICENSE  Makefile  OPTION_B_SUMMARY.md  PARSER_IMPROVEMENTS_SESSION.md  PHASE_6D_FINDINGS.md  PHASE_6_CHECKPOINT_REVIEW.md  PHASE_6_FINAL_STATUS.md  PHASE_6_PLAN.md  PHASE_7_COMPLETE.md  PHASE_8_BASELINE_ANALYSIS.md  PROGRESS.md  Package.swift  README.md  REFACTORING_PROGRESS.md  SCANNER_FIX_ANALYSIS.md  SCANNER_REBUILD_REPORT.md  SESSION_PROGRESS.md  TABLE_IMPLEMENTATION.md  TABLE_IMPLEMENTATION_SUMMARY.md  TABLE_QUICK_REFERENCE.md  TABLE_TAG_IMPLEMENTATION_SUMMARY.md  TABLE_TAG_SPECIFICATION.md  TECHNICAL_SPEC_28_TESTS.md  WARP.md  WORK_SUMMARY.md  binding.gyp  detailed_errors.txt  failing_tests.txt  full_test.txt  go.mod  (+74 more)
bindings/c/: tree-sitter-tree-sitter-markdoc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
notes/: asciidoc_grammar_reference.js  asciidoc_scanner_reference.c  command-output.md  markdoc.ebnf
queries/: README.md  highlights.scm  injections.scm
samples/: blog-series.mdoc  documentary-notes.mdoc  language-field-guide.mdoc  story-atlas.mdoc
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.c.original
test/: table_examples.md
test/corpus/: 01-document-frontmatter.txt  02-headings-paragraphs.txt  03-fenced-code.txt  04-markdoc-tags.txt  05-html-tags-and-comments.txt  05-lists.txt  06-expressions-and-attributes.txt  06-inline-formatting.txt  07-html.txt  07-tag-closing-and-whitespace.txt  (+11 more)
(+6 files in other folders)
