[package]
name = "tree-sitter-tree-sitter-markdoc"
description = "This is a tree sitter parser for markdoc"
version = "0.1.0"
authors = ["Shelton Louis <louisshelton0@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-markdoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "http://github.com/louiss0/tree-sitter-markdoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
